@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.6 2016/11/06 03:03:16 wen Exp $
+$NetBSD: distinfo,v 1.7 2019/07/31 20:31:28 brook Exp $
 
-SHA1 (R/splancs_2.01-39.tar.gz) = 4021e9e7d70859760217879ccb08a06ebd9dae26
-RMD160 (R/splancs_2.01-39.tar.gz) = 26d8da1e53b55b5c8217ac6434493eb486d828e1
-SHA512 (R/splancs_2.01-39.tar.gz) = 4679e98b602a3de6cb1ae32f395a343fdbaaf6cb35f887e310cb4e6c78c2802f52492b5f996141fbaf001adaec20ce19359787dcff2597c74511e61a09784df9
-Size (R/splancs_2.01-39.tar.gz) = 106197 bytes
+SHA1 (R/splancs_2.01-40.tar.gz) = 78ae26c41c00753ab192e4163f5b20b7b2ed2acd
+RMD160 (R/splancs_2.01-40.tar.gz) = 4df5d4fc0e3cc38188155d36e22cbecf0bc3b587
+SHA512 (R/splancs_2.01-40.tar.gz) = 0157a1031b8dc8caa2bea7e2d6697aef6b6ab35f69ca1d0cbe7ea21968f7980e19d287461216938a92eac019f97db972ae5af67392ab152017a2a69182ace495
+Size (R/splancs_2.01-40.tar.gz) = 105583 bytes
