@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3197 2019/07/31 20:30:02 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3198 2019/07/31 20:31:27 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5154,3 +5154,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-randomForest to 4.6.14 [brook 2019-07-31]
 	Updated math/R-sgeostat to 1.0.27 [brook 2019-07-31]
 	Updated math/R-spacetime to 1.2.2 [brook 2019-07-31]
+	Updated math/R-splancs to 2.01.40 [brook 2019-07-31]
